[gd_scene load_steps=3 format=3 uid="uid://kscc8y8tmn"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_nbtr0"]
[ext_resource type="PackedScene" uid="uid://bj6qa6sy16656" path="res://Scenes/main_menu.tscn" id="2_4ll2d"]

[node name="game_over" type="Node2D"]
z_index = 102
script = ExtResource("1_nbtr0")
main_scene = ExtResource("2_4ll2d")

[node name="TextureRect" type="ColorRect" parent="."]
color = Color(0.858824, 0.352941, 0.290196, 1)

[node name="MenuControl" type="Control" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="TextureRect/MenuControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.5
offset_top = -63.0
offset_right = 122.5
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MenuControl/CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="Label" type="Label" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "You lost all your weeds!"

[node name="MenuButton" type="Button" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="TextureRect/MenuControl/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="TextureRect/MenuControl/CenterContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="TextureRect/MenuControl/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
